<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="playModel"
            type="cc.onion.cosyfans.module_trade.PlayResultAndroidModel" />
    </data>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/body"
        android:background="@color/white"
        android:layout_height="match_parent">




        <ImageView
            android:id="@+id/img_order_state"
            android:layout_marginTop="80dp"
            android:layout_gravity="center"
            android:src="@mipmap/play_success"
            android:layout_width="80dp"
            android:scaleType="center"
            android:layout_height="80dp"/>

        <TextView
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
          android:text="@={playModel.orderShowState}"
            android:layout_width="match_parent"
            android:textSize="@dimen/base_font_size_20"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/trade_order_amount"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:textSize="@dimen/base_font_size_16"
                android:textColor="@color/text"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/bluce"
                android:textSize="@dimen/base_font_size_16"
                android:text="@={playModel.totalMonery}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_time"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/trade_coundown_time"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:textSize="@dimen/base_font_size_16"
                android:textColor="@color/text"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:text="@={playModel.times}"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/bluce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">


        <TextView
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:text="@string/trade_see_order"
            android:minWidth="100dp"
            android:onClick="@{v->playModel.orderDetail()}"
            android:gravity="center"
            android:background="@drawable/trade_button_bg"
            android:layout_height="wrap_content"
            />


        <TextView
            android:layout_marginLeft="50dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:onClick="@{v->playModel.goHome()}"
            android:text="@string/trade_back_home"
            android:minWidth="100dp"
            android:gravity="center"
            android:background="@drawable/trade_button_bg"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


    </LinearLayout>


</layout>
